# computor_v2

./: .gitignore  CMakeLists.txt  README.md  calc1.cpp  matrix_ast.cpp  mycalc.cpp
apps/computorv2/: ast.hpp  computor.cpp  evaluator.cpp  evaluator.hpp  main.cpp  parser.hpp  printer.cpp  printer.hpp
source/: CMakeLists.txt  ast.hpp  ast_adapted.hpp  complex.cpp  complex.hpp  complex_test.cpp  computor.cpp  computor.hpp  evaluator.cpp  evaluator.hpp  expr.cpp  expr.hpp  expr_factory.cpp  expr_factory.hpp  function.cpp  function.hpp  main.cpp  math.cpp  math.hpp  matrix.cpp  matrix.hpp  matrix_test.cpp  parser.hpp  printer.cpp  printer.hpp  term.cpp  term.hpp  utils.hpp
test/: CMakeLists.txt  complex_test.cpp  evaluator_test.cpp  expr_test.cpp  main.cpp  math_test.cpp  matrix_test.cpp  term_test.cpp
